tests/invalid/bug113.err_exp
bug113.m:019: In module `bug113':
bug113.m:019:   warning: module `list' is imported in the interface, but it is
bug113.m:019:   not used in the interface.
bug113.m:032: Error: clause for function `new'/1
bug113.m:032:   without corresponding `:- func' declaration.
bug113.m:032: Inferred :- func new(T1) = T2.
bug113.m:034: Error: clause for function `new'/2
bug113.m:034:   without corresponding `:- func' declaration.
bug113.m:036: In clause for function `new'/2:
bug113.m:036:   error: undefined symbol `throw_bitmap_error'/1.
bug113.m:038: In clause for function `new'/2:
bug113.m:038:   error: undefined symbol `initializer'/1.
bug113.m:039: In clause for function `new'/2:
bug113.m:039:   error: undefined symbol `initialize_bitmap'/3.
bug113.m:039: In clause for function `new'/2:
bug113.m:039:   in argument 1 of functor `initialize_bitmap/3':
bug113.m:039:   error: undefined symbol `allocate_bitmap'/1.
bug113.m:040: In clause for function `new'/2:
bug113.m:040:   error: undefined symbol `clear_filler_bits'/1.
